--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   />
                   <img
                     loading="lazy"
-                    src="heart.png"
+                    src="heart1.png"
                     class="aspect-square object-contain object-center w-7 overflow-hidden shrink-0 max-w-full"
                   />
                   <img
